# rusty_uxn

./: Cargo.toml  LICENSE  README.md  datetime.tal  op  op2  rabbit_test.tal  screen_test.rom  screen_test.tal  test_file
example_assets/cli/: date_print.tal  name_echo.tal
example_assets/emu/: rabbit_test.tal
src/: emulators.rs  instruction.rs  lib.rs  ops.rs  utils.rs  uxnasmlib.rs  uxnemulib.rs  uxninterface.rs
src/emulators/: devices.rs  romreaderror.rs  uxn.rs  uxnclilib.rs  uxnemulib.rs
src/emulators/devices/: console.rs  controller.rs  datetime.rs  device_list_impl.rs  file.rs  mouse.rs  screen.rs  system.rs
src/emulators/uxn/: device.rs
src/emulators/uxnemulib/: device_list_impl.rs  uxn.rs
src/emulators/uxnemulib/devices/: console.rs  system.rs
src/emulators/uxnemulib/uxn/: device.rs
src/ops/: op_handlers.rs
src/ops/op_handlers/: arithmetic.rs  bitwise.rs  control_flow.rs  logic.rs  memory.rs  stack.rs
src/utils/: spritemake.rs
src/uxnasmlib/: asm.rs
src/uxnasmlib/asm/: macros.rs  tokens.rs
src/uxnasmlib/asm/tokens/: ops.rs
src/uxnemulib/: device_list_impl.rs  devices.rs  uxn.rs
src/uxnemulib/devices/: console.rs  system.rs
src/uxnemulib/uxn/: device.rs
tests/: basic.rs
