[package]
name = "rusty_uxn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
speedy2d = "1.5.0"
uuid = { version = "1.0.0", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

[features]
emu = []
asm = []

[[bin]]
name = "uxnemu"
required-features= ["emu"]

[[bin]]
name = "uxnasm"
required-features= ["asm"]
